--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@
                     
                     <!-- Sign In / Customer Menu -->
                     <div class="auth-links" id="authLinks" style="align-items: center; gap: 0.5rem;">
-                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal(event)">
+                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="redirectToLogin()">
                             <i class="fas fa-sign-in-alt mr-1"></i>Sign In
                         </button>
                     </div>
@@ -1089,6 +1089,22 @@
             loadBasket();
             updateNavVisibility();
         });
+
+        // Redirect to login page with return URL
+        function redirectToLogin() {
+            // Store current page URL for redirect after login
+            localStorage.setItem('returnUrl', window.location.href);
+            // Navigate to login page
+            window.location.href = 'customer-login.html';
+        }
+
+        // Redirect to register page with return URL
+        function redirectToRegister() {
+            // Store current page URL for redirect after registration
+            localStorage.setItem('returnUrl', window.location.href);
+            // Navigate to register page
+            window.location.href = 'customer-register.html';
+        }
     </script>
 </body>
 </html>
