--- a/business-plan-management.html
+++ b/business-plan-management.html
@@ -6,6 +6,7 @@
     <title>Manage Your Plan - BLKPAGES</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="js/access-control.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
