updated sign in /sign up

--- a/index.html
+++ b/index.html
@@ -971,6 +971,17 @@
                         Sign Up
                     </button>
                 </form>
+                <!-- Demo Credentials -->
+                <div class="mt-4 p-4 bg-white/5 rounded-lg border border-white/10">
+                    <h4 class="text-white font-semibold mb-2">Demo Credentials:</h4>
+                    <p class="text-white/70 text-sm mb-1">Full Name: John Doe</p>
+                    <p class="text-white/70 text-sm mb-1">Email: customer@example.com</p>
+                    <p class="text-white/70 text-sm mb-2">Password: Password123</p>
+                    <button type="button" onclick="fillDemoCredentials()" class="text-neon-pink hover:underline text-sm">
+                        <i class="fas fa-magic mr-1"></i>
+                        Use Demo Credentials
+                    </button>
+                </div>
                 <p class="text-center text-white/70 mt-4">
                     Already have an account? 
                     <button onclick="toggleLoginModal(event); toggleSignupModal(event);" class="text-neon-pink hover:underline">Login</button>
