--- a/email-templates/reward-unlocked.html
+++ b/email-templates/reward-unlocked.html
@@ -240,6 +240,7 @@
         <!-- Footer -->
         <div class="footer">
             <p>This email was sent because you have an active loyalty program with {{businessName}}.</p>
+            <p>Need help? Contact us at <a href="mailto:support@blkpages.co.uk" style="color: #FF3CAC;">support@blkpages.co.uk</a></p>
             <p>
                 <a href="https://blkpages.com">BlkPages</a> | 
                 <a href="https://blkpages.com/contact">Contact Us</a> | 
