--- a/customer-dashboard-backup-20251009-112207.html
+++ b/customer-dashboard-backup-20251009-112207.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Access control temporarily disabled for testing -->
     <!-- <script src="js/access-control.js"></script> -->
-    
-    <!-- Security & GDPR Features -->
-    <script src="js/security-utils.js"></script>
-    <script src="js/cookie-consent.js"></script>
     <style>
         * {
             margin: 0;
@@ -1813,12 +1809,12 @@
             <button class="nav-tab" onclick="showTab('loyalty')">
                 <i class="fas fa-gift"></i> Loyalty Rewards
             </button>
-            <button class="nav-tab" onclick="showTab('account')">
-                <i class="fas fa-user-cog"></i> My Account
-            </button>
             <button class="nav-tab" onclick="showTab('waiting-list')">
                 <i class="fas fa-clock"></i> Waiting List
                 <span class="tab-badge" id="waitingListTabBadge" style="display: none;">0</span>
+            </button>
+            <button class="nav-tab" onclick="showTab('account')">
+                <i class="fas fa-user"></i> Account
             </button>
                     </div>
 
