--- a/customer-register.html
+++ b/customer-register.html
@@ -212,9 +212,10 @@
                         </div>
                         
                         <div class="form-group">
-                            <label for="mobile">Mobile Number (Optional)</label>
-                            <input type="tel" id="mobile" name="mobile" placeholder="Enter your mobile number">
-                            <div id="mobileError" class="error-message"></div>
+                            <label for="phone">Mobile Number <span class="required">*</span></label>
+                            <input type="tel" id="phone" name="phone" required placeholder="Enter your mobile number (e.g., 07123 456789)">
+                            <div class="form-help">We use your number to send booking confirmations, changes, and cancellations. It's stored securely and never shown to businesses in full. You can verify or update it in your account at any time.</div>
+                            <div id="phoneError" class="error-message"></div>
                         </div>
                         
                         <div class="form-group">
@@ -257,5 +258,6 @@
     </div>
 
     <script src="js/customer-auth.js"></script>
+    <script src="backend/customer-phone-verification.js"></script>
 </body>
 </html>
