--- a/search-results.html
+++ b/search-results.html
@@ -6,6 +6,9 @@
     <title>Search Results - BlkPages (Updated)</title>
     <script src="https://cdn.tailwindcss.com?v=2"></script>
     <script src="js/suppress-tailwind-warning.js"></script>
+    
+    <!-- Basket Count Sync Fix -->
+    <script src="assets/js/basket.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css?v=2">
     <script>
