--- a/business-register.html
+++ b/business-register.html
@@ -949,14 +949,15 @@
                                 <div class="tier-period">Forever</div>
                             </div>
                             <ul class="tier-features">
-                                <li><i class="fas fa-check"></i> Business name & contact</li>
-                                <li><i class="fas fa-check"></i> Basic address</li>
-                                <li><i class="fas fa-check"></i> Phone number</li>
-                                <li><i class="fas fa-check"></i> Category listing</li>
-                                <li><i class="fas fa-times unavailable"></i> Customer reviews</li>
-                                <li><i class="fas fa-times unavailable"></i> Business logo</li>
-                                <li><i class="fas fa-times unavailable"></i> Photo gallery</li>
-                                <li><i class="fas fa-times unavailable"></i> Online booking</li>
+                                <li><i class="fas fa-check"></i> Business listing with category visibility</li>
+                                <li><i class="fas fa-check"></i> Basic contact details</li>
+                                <li><i class="fas fa-check"></i> Standard search placement</li>
+                                <li><i class="fas fa-times unavailable"></i> Business logo and photo gallery</li>
+                                <li><i class="fas fa-times unavailable"></i> Enhanced profile visibility</li>
+                                <li><i class="fas fa-times unavailable"></i> Customer review highlights</li>
+                                <li><i class="fas fa-times unavailable"></i> Basic booking system</li>
+                                <li><i class="fas fa-times unavailable"></i> Advanced booking system</li>
+                                <li><i class="fas fa-times unavailable"></i> Business insights</li>
                             </ul>
                         </div>
                         
@@ -968,14 +969,15 @@
                                 <div class="tier-period">per month</div>
                             </div>
                             <ul class="tier-features">
-                                <li><i class="fas fa-check"></i> Everything in Free</li>
+                                <li><i class="fas fa-check"></i> Business listing with category visibility</li>
+                                <li><i class="fas fa-check"></i> Basic contact details</li>
+                                <li><i class="fas fa-check"></i> Standard search placement</li>
                                 <li><i class="fas fa-check"></i> Business logo and photo gallery (up to 3 photos)</li>
                                 <li><i class="fas fa-check"></i> Enhanced profile visibility</li>
                                 <li><i class="fas fa-check"></i> Customer review highlights</li>
                                 <li><i class="fas fa-check"></i> Basic booking system</li>
-                                <li><i class="fas fa-times unavailable"></i> Advanced booking system with calendar sync</li>
-                                <li><i class="fas fa-times unavailable"></i> Customer management dashboard</li>
-                                <li><i class="fas fa-times unavailable"></i> Priority placement in search</li>
+                                <li><i class="fas fa-times unavailable"></i> Advanced booking system</li>
+                                <li><i class="fas fa-times unavailable"></i> Business insights</li>
                             </ul>
                         </div>
 
@@ -987,14 +989,15 @@
                                 <div class="tier-period">per month</div>
                             </div>
                             <ul class="tier-features">
-                                <li><i class="fas fa-check"></i> Everything in Starter</li>
-                                <li><i class="fas fa-check"></i> Photo gallery (up to 10 photos)</li>
-                                <li><i class="fas fa-check"></i> Advanced booking system with calendar sync</li>
-                                <li><i class="fas fa-check"></i> Customer management dashboard</li>
-                                <li><i class="fas fa-check"></i> Priority placement in search</li>
-                                <li><i class="fas fa-check"></i> Basic analytics</li>
-                                <li><i class="fas fa-times unavailable"></i> Advanced analytics (performance trends)</li>
-                                <li><i class="fas fa-times unavailable"></i> Marketing tools</li>
+                                <li><i class="fas fa-check"></i> Business listing with category visibility</li>
+                                <li><i class="fas fa-check"></i> Basic contact details</li>
+                                <li><i class="fas fa-check"></i> Standard search placement</li>
+                                <li><i class="fas fa-check"></i> Business logo and photo gallery (up to 10 photos)</li>
+                                <li><i class="fas fa-check"></i> Enhanced profile visibility</li>
+                                <li><i class="fas fa-check"></i> Customer review highlights</li>
+                                <li><i class="fas fa-check"></i> Basic booking system</li>
+                                <li><i class="fas fa-check"></i> Advanced booking system</li>
+                                <li><i class="fas fa-check"></i> Business insights</li>
                             </ul>
                         </div>
 
