--- a/why-list-with-us.html
+++ b/why-list-with-us.html
@@ -1264,7 +1264,7 @@
                             <li><i class="fas fa-check"></i> Business listing with category visibility</li>
                             <li><i class="fas fa-check"></i> Basic contact details</li>
                             <li><i class="fas fa-check"></i> Standard search placement</li>
-                            <li><i class="fas fa-check"></i> Business logo and photo gallery</li>
+                            <li><i class="fas fa-times unavailable"></i> Business logo and photo gallery</li>
                             <li><i class="fas fa-times unavailable"></i> Enhanced profile visibility</li>
                             <li><i class="fas fa-times unavailable"></i> Customer review highlights</li>
                             <li><i class="fas fa-times unavailable"></i> Basic booking system</li>
