--- a/business-register.html
+++ b/business-register.html
@@ -989,15 +989,14 @@
                                 <div class="tier-period">per month</div>
                             </div>
                             <ul class="tier-features">
-                                <li><i class="fas fa-check"></i> Business listing with category visibility</li>
-                                <li><i class="fas fa-check"></i> Basic contact details</li>
-                                <li><i class="fas fa-check"></i> Standard search placement</li>
-                                <li><i class="fas fa-check"></i> Business logo and photo gallery (up to 10 photos)</li>
-                                <li><i class="fas fa-check"></i> Enhanced profile visibility</li>
-                                <li><i class="fas fa-check"></i> Customer review highlights</li>
-                                <li><i class="fas fa-check"></i> Basic booking system</li>
-                                <li><i class="fas fa-check"></i> Advanced booking system</li>
-                                <li><i class="fas fa-check"></i> Business insights</li>
+                                <li><i class="fas fa-check"></i> Everything in Starter</li>
+                                <li><i class="fas fa-check"></i> Photo gallery (up to 10 photos)</li>
+                                <li><i class="fas fa-check"></i> Premium profile visibility</li>
+                                <li><i class="fas fa-check"></i> Advanced booking system with calendar sync</li>
+                                <li><i class="fas fa-check"></i> Stripe integration (Full payment or Deposits 10–50%)</li>
+                                <li><i class="fas fa-check"></i> SMS booking confirmations + reminders (X included)</li>
+                                <li><i class="fas fa-check"></i> Customer management dashboard (notes, history, analytics)</li>
+                                <li><i class="fas fa-check"></i> Business insights (bookings, revenue, busiest times)</li>
                             </ul>
                         </div>
 
