--- a/search.html
+++ b/search.html
@@ -169,6 +169,7 @@
                     <li><a href="index.html#categories">Categories</a></li>
                     <li><a href="index.html#featured">Featured</a></li>
                     <li><a href="search.html" class="active">Browse</a></li>
+                    <li><a href="business-profile-page.html" style="background: linear-gradient(135deg, #D4AF37, #B8860B); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-weight: 600;">Business Profile 2</a></li>
                 </ul>
                 <a href="business-register.html" class="btn-nav">List Your Business</a>
             </div>
@@ -247,7 +248,7 @@
                                 <div style="color: #FFD700;">★★★★★</div>
                                 <span style="font-size: 0.9rem; opacity: 0.9;">4.9 (127 reviews)</span>
                             </div>
-                            <a href="business-profile.html?id=royal-hair" style="background: rgba(255,255,255,0.2); color: white; padding: 0.8rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 500; display: inline-block; transition: background 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.3)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'">
+                            <a href="/business/royal-hair-studio" style="background: rgba(255,255,255,0.2); color: white; padding: 0.8rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 500; display: inline-block; transition: background 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.3)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'">
                                 View Profile
                             </a>
                         </div>
@@ -262,7 +263,7 @@
                                 <div style="color: #FFD700;">★★★★★</div>
                                 <span style="font-size: 0.9rem; opacity: 0.9;">4.8 (156 reviews)</span>
                             </div>
-                            <a href="business-profile.html?id=glamour-beauty" style="background: rgba(255,255,255,0.2); color: white; padding: 0.8rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 500; display: inline-block; transition: background 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.3)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'">
+                            <a href="/business/glamour-beauty" style="background: rgba(255,255,255,0.2); color: white; padding: 0.8rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 500; display: inline-block; transition: background 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.3)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'">
                                 View Profile
                             </a>
                         </div>
@@ -305,7 +306,7 @@
                             </div>
                         </div>
                         <div class="business-actions">
-                            <a href="business-profile.html?id=royal-hair" class="btn-primary">View Profile</a>
+                            <a href="/business/royal-hair-studio" class="btn-primary">View Profile</a>
                             <a href="appointments.html" class="btn-outline">Book Now</a>
                         </div>
                     </div>
@@ -341,7 +342,7 @@
                             </div>
                         </div>
                         <div class="business-actions">
-                            <a href="business-profile.html?id=elite-barber" class="btn-primary">View Profile</a>
+                            <a href="/business/elite-barber" class="btn-primary">View Profile</a>
                             <a href="#" class="btn-outline" onclick="alert('Booking coming soon!')">Book Now</a>
                         </div>
                     </div>
@@ -377,7 +378,7 @@
                             </div>
                         </div>
                         <div class="business-actions">
-                            <a href="business-profile.html?id=glamour-beauty" class="btn-primary">View Profile</a>
+                            <a href="/business/glamour-beauty" class="btn-primary">View Profile</a>
                             <a href="#" class="btn-outline" onclick="alert('Booking coming soon!')">Book Now</a>
                         </div>
                     </div>
