updated business profile

--- a/business-bookings-dashboard.html
+++ b/business-bookings-dashboard.html
@@ -862,6 +862,16 @@
         </div>
     </main>
     
+    <!-- Message Monitoring Disclaimer -->
+    <div style="background: rgba(0, 0, 0, 0.8); padding: 1rem 0; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+        <div class="container">
+            <p style="text-align: center; font-size: 0.75rem; color: #9CA3AF; font-style: italic; margin: 0;">
+                Messages sent through BlkPages are delivered directly to customers. 
+                BlkPages does not monitor or store conversation content.
+            </p>
+        </div>
+    </div>
+    
     <!-- Footer -->
     <footer style="background: #0F0F0F; color: #ffffff; padding: 2rem 0; text-align: center; border-top: 1px solid rgba(255, 255, 255, 0.1);">
         <div class="container">
