--- a/business-profile-page.html
+++ b/business-profile-page.html
@@ -333,18 +333,10 @@
 
                         <!-- Payment Methods -->
                         <div class="card-gradient rounded-3xl p-6 border-glow">
-                            <div class="flex items-center justify-between mb-4">
-                                <h3 class="text-xl font-bold text-white flex items-center">
-                                    <i class="fas fa-credit-card mr-3 text-gold"></i>
-                                    Payment Options
-                                </h3>
-                                <a href="business-dashboard-payment-options.html" 
-                                   class="text-gold hover:text-gold/80 text-sm underline transition-colors duration-300"
-                                   target="_blank">
-                                    <i class="fas fa-cog mr-1"></i>
-                                    Manage in Dashboard
-                                </a>
-                            </div>
+                            <h3 class="text-xl font-bold text-white mb-4 flex items-center">
+                                <i class="fas fa-credit-card mr-3 text-gold"></i>
+                                Payment Options
+                            </h3>
                             <div class="space-y-4" id="paymentOptions">
                                 <!-- Payment options will be populated by JavaScript based on business settings -->
                             </div>
