updated profile page

--- a/business-profile-page.html
+++ b/business-profile-page.html
@@ -947,6 +947,17 @@
             window.location.href = 'booking-review.html';
         }
 
+        // Direct link to new payment page (for testing)
+        function goToNewPaymentPage() {
+            // Store business data with payment settings
+            const businessWithPayments = {
+                ...businessData,
+                payments: getBusinessPaymentSettings()
+            };
+            localStorage.setItem('selectedBusiness', JSON.stringify(businessWithPayments));
+            window.location.href = 'payment-new.html';
+        }
+
         // Call business
         function callBusiness(phoneNumber) {
             window.location.href = `tel:${phoneNumber}`;
