--- a/demo-hub.html
+++ b/demo-hub.html
@@ -169,6 +169,10 @@
             background: linear-gradient(135deg, #8b5cf6, #7c3aed);
         }
 
+        .system-icon.business-directory {
+            background: linear-gradient(135deg, #3b82f6, #2563eb);
+        }
+
         .system-title {
             font-size: 1.5rem;
             font-weight: 700;
@@ -859,6 +863,40 @@
                     </a>
                 </div>
             </div>
+
+            <!-- Business Directory & Tier Management System -->
+            <div class="system-card">
+                <div class="system-header">
+                    <div class="system-icon business-directory">
+                        <i class="fas fa-building"></i>
+                    </div>
+                    <div>
+                        <div class="system-title">Business Directory & Tier Management</div>
+                        <div class="system-description">Advanced business listing system with tier-based priority, featured management, and daily refresh automation</div>
+                    </div>
+                </div>
+                <ul class="system-features">
+                    <li>Tier-based priority system (Featured > Professional > Starter > Free)</li>
+                    <li>Daily seeded shuffling for fair rotation within tiers</li>
+                    <li>Featured business add-on management with expiry tracking</li>
+                    <li>Real-time dashboard updates and tier synchronization</li>
+                    <li>Billing cycle management with future change tracking</li>
+                    <li>Mid-month cancellation handling and next-month planning</li>
+                    <li>Advanced search, filtering, and sorting capabilities</li>
+                    <li>Mobile-responsive design with compact business cards</li>
+                </ul>
+                <div class="system-actions">
+                    <a href="search-results-new.html" class="btn-demo">
+                        <i class="fas fa-play"></i> View Demo
+                    </a>
+                    <a href="business-dashboard.html" class="btn-dashboard">
+                        <i class="fas fa-chart-line"></i> Business Dashboard
+                    </a>
+                    <a href="business-profile.html" class="btn-dashboard">
+                        <i class="fas fa-store"></i> Business Profile
+                    </a>
+                </div>
+            </div>
         </div>
 
         <!-- Statistics Section -->
@@ -866,7 +904,7 @@
             <h2 style="text-align: center; margin-bottom: 30px; font-size: 2rem;">System Statistics</h2>
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-value">16</div>
+                    <div class="stat-value">17</div>
                     <div class="stat-label">Complete Systems</div>
                 </div>
                 <div class="stat-item">
@@ -989,6 +1027,14 @@
                     <p>User account management with data export and deletion features</p>
                     <a href="my-account.html">
                         <i class="fas fa-external-link-alt"></i> View Account Demo
+                    </a>
+                </div>
+                
+                <div class="link-card">
+                    <h3><i class="fas fa-building"></i> Business Directory</h3>
+                    <p>Advanced business listing system with tier management and featured businesses</p>
+                    <a href="search-results-new.html">
+                        <i class="fas fa-external-link-alt"></i> View Directory Demo
                     </a>
                 </div>
                 
