--- a/search-results-clean.html
+++ b/search-results-clean.html
@@ -1135,16 +1135,25 @@
                             <i class="fas fa-map-marker-alt mr-2"></i>
                             ${business.address || business.location}
                         </p>
-                        <div class="flex space-x-3">
+                        <div class="flex space-x-2">
                             <button onclick="goToBusinessProfile('${businessSlug}')" 
-                                    class="flex-1 py-3 rounded-lg bg-gradient-to-r from-gold to-gold-dark text-black font-semibold hover:from-gold-dark hover:to-gold transition-all duration-300 shadow-lg hover:shadow-xl">
+                                    class="flex-1 py-2 px-3 rounded-lg bg-gradient-to-r from-gold to-gold-dark text-black font-semibold text-sm hover:from-gold-dark hover:to-gold transition-all duration-300 shadow-lg hover:shadow-xl">
                                 Book Now
                             </button>
                             ${business.phone ? `
                             <button onclick="callBusiness('${business.phone}')" 
-                                    class="px-4 py-3 rounded-lg border border-white/20 text-white hover:bg-white/10 hover:border-gold/50 transition-all duration-300">
-                                <i class="fas fa-phone"></i>
+                                    class="px-3 py-2 rounded-lg border border-white/20 text-white hover:bg-white/10 hover:border-gold/50 transition-all duration-300">
+                                <i class="fas fa-phone text-sm"></i>
                             </button>` : ''}
+                            ${business.email ? `
+                            <button onclick="emailBusiness('${business.email}')" 
+                                    class="px-3 py-2 rounded-lg border border-white/20 text-white hover:bg-white/10 hover:border-gold/50 transition-all duration-300">
+                                <i class="fas fa-envelope text-sm"></i>
+                            </button>` : ''}
+                            <button onclick="shareBusiness('${business.id}', '${business.name}', '${business.address || business.location}', '${business.phone}', '${business.email}')" 
+                                    class="px-3 py-2 rounded-lg border border-white/20 text-white hover:bg-white/10 hover:border-gold/50 transition-all duration-300">
+                                <i class="fas fa-share text-sm"></i>
+                            </button>
                         </div>
                     </div>
                 `;
@@ -1169,6 +1178,95 @@
         function callBusiness(phoneNumber) {
             // Open phone dialer with business phone number
             window.location.href = `tel:${phoneNumber}`;
+        }
+
+        // Email business
+        function emailBusiness(emailAddress) {
+            window.open(`mailto:${emailAddress}`, '_self');
+        }
+
+        // Share business
+        function shareBusiness(businessId, businessName, address, phone, email) {
+            const shareText = `Check out ${businessName} on BlkPages! ${address ? `Located at ${address}.` : ''} ${phone ? `Call: ${phone}` : ''} ${email ? `Email: ${email}` : ''} Find more details and book services at: ${window.location.origin}/business/${businessId}`;
+            
+            if (navigator.share) {
+                navigator.share({
+                    title: `${businessName} - BlkPages`,
+                    text: shareText,
+                    url: `${window.location.origin}/business/${businessId}`
+                }).catch(err => {
+                    console.log('Error sharing:', err);
+                    fallbackShare(shareText);
+                });
+            } else {
+                fallbackShare(shareText);
+            }
+        }
+
+        // Fallback share function for browsers that don't support Web Share API
+        function fallbackShare(shareText) {
+            if (navigator.clipboard) {
+                navigator.clipboard.writeText(shareText).then(() => {
+                    showShareSuccess();
+                }).catch(() => {
+                    showShareModal(shareText);
+                });
+            } else {
+                showShareModal(shareText);
+            }
+        }
+
+        // Show share success message
+        function showShareSuccess() {
+            const toast = document.createElement('div');
+            toast.className = 'fixed top-4 right-4 bg-green-500 text-white px-6 py-3 rounded-lg shadow-lg z-50 transition-all duration-300';
+            toast.innerHTML = '<i class="fas fa-check mr-2"></i>Business details copied to clipboard!';
+            document.body.appendChild(toast);
+            
+            setTimeout(() => {
+                toast.style.opacity = '0';
+                setTimeout(() => document.body.removeChild(toast), 300);
+            }, 3000);
+        }
+
+        // Show share modal for manual copying
+        function showShareModal(shareText) {
+            const modal = document.createElement('div');
+            modal.className = 'fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50';
+            modal.innerHTML = `
+                <div class="bg-white rounded-lg p-6 max-w-md mx-4">
+                    <h3 class="text-lg font-bold mb-4">Share Business</h3>
+                    <p class="text-gray-600 mb-4">Copy the text below to share this business:</p>
+                    <textarea class="w-full p-3 border rounded-lg mb-4" rows="4" readonly>${shareText}</textarea>
+                    <div class="flex space-x-3">
+                        <button onclick="copyToClipboard('${shareText.replace(/'/g, "\\'")}')" 
+                                class="flex-1 bg-gold text-black py-2 px-4 rounded-lg font-semibold hover:bg-gold-dark transition-colors">
+                            Copy Text
+                        </button>
+                        <button onclick="closeShareModal()" 
+                                class="flex-1 bg-gray-300 text-gray-700 py-2 px-4 rounded-lg font-semibold hover:bg-gray-400 transition-colors">
+                            Close
+                        </button>
+                    </div>
+                </div>
+            `;
+            document.body.appendChild(modal);
+        }
+
+        // Copy text to clipboard
+        function copyToClipboard(text) {
+            navigator.clipboard.writeText(text).then(() => {
+                showShareSuccess();
+                closeShareModal();
+            });
+        }
+
+        // Close share modal
+        function closeShareModal() {
+            const modal = document.querySelector('.fixed.inset-0.bg-black.bg-opacity-50');
+            if (modal) {
+                document.body.removeChild(modal);
+            }
         }
 
         function clearAllFilters() {
